# jsmagi

./: .gitignore  Cargo.toml  README.md  tsconfig.json
jsmagi/: Cargo.toml
jsmagi/src/: eval.rs  main.rs  rename.rs
jsmagi/src/passes/: es_module.rs  iife_expand.rs  init_assignment.rs  nested_assignment.rs  not_iife.rs  not_lit.rs  seq_expand.rs  var_decl_expand.rs  var_decl_simp.rs  void_to_undefined.rs
jsmagi/src/passes/ts/: enum_convert.rs
jsmagi/tests/__swc_snapshots__/src/passes/es_module.rs/: rename1.js
jsmagi/tests/__swc_snapshots__/src/passes/iife_expand.rs/: iife_expand10.js  iife_expand11.js  iife_expand12.js  iife_expand13.js  iife_expand14.js  iife_expand1_sanity1.js  iife_expand1_sanity2.js  iife_expand1_sanity3.js  iife_expand4.js  iife_expand6.js  iife_expand7.js  iife_expand8.js  iife_expand9.js  iife_expand_sanity7.js
jsmagi/tests/__swc_snapshots__/src/passes/init_assignment.rs/: weird_assign.js
jsmagi/tests/__swc_snapshots__/src/passes/nested_assignment.rs/: nested_assignment.js  nested_assignment2.js  nested_assignment3.js  nested_assignment4.js  nested_assignment5.js  nested_assignment6.js
jsmagi/tests/__swc_snapshots__/src/passes/not_iife.rs/: neg_iife.js  neg_iife_sanity.js
jsmagi/tests/__swc_snapshots__/src/passes/not_lit.rs/: not_lit3.js
jsmagi/tests/__swc_snapshots__/src/passes/seq_expand.rs/: seq.js  seq2.js  seq3.js
jsmagi/tests/__swc_snapshots__/src/passes/var_decl_expand.rs/: multivariable.js
jsmagi/tests/__swc_snapshots__/src/passes/var_decl_simp.rs/: multiple_variables_def_with_init.js  single_variable.js  single_variable_def.js  single_variable_def_with_init.js  (+1 more)
src/: es_module.rs  (+13 more)
(+22 files in other folders)
