[package]
name = "jsmagi"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
serde = "1"
smallvec = { version = "1.10.0", features = ["const_generics"] }
swc = "0.236.17"
swc_atoms = "0.4.30"
swc_common = "0.29.23"
swc_core = "0.44.*"
swc_ecma_ast = "0.95.7"
swc_ecma_parser = "0.123.11"
swc_ecma_transforms_base = "0.112.15"
swc_ecma_transforms_testing = "0.115.16"
swc_ecma_utils = "0.106.13"
swc_ecma_visit = "0.81.7"
