[workspace]
members = ["jsmagi"]
resolver = "2"

[workspace.dependencies]
serde = "1"
smallvec = { version = "1.10.0", features = ["const_generics"] }
swc = "0.270.0"
swc_atoms = "0.6.5"
swc_common = "0.33.12"
swc_core = "0.87.*"
swc_ecma_ast = "0.110.15"
swc_ecma_parser = "0.141.33"
swc_ecma_transforms_base = "0.135.0"
swc_ecma_transforms_testing = "0.138.0"
swc_ecma_utils = "0.125.0"
swc_ecma_visit = "0.96.15"
swc_ecma_codegen = "0.146.44"
swc_ecma_testing = "0.22.15"
