[package]
name = "jsmagi"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
serde.workspace = true
smallvec.workspace = true
swc.workspace = true
swc_atoms.workspace = true
swc_common.workspace = true
swc_core.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_parser.workspace = true
swc_ecma_transforms_base.workspace = true
swc_ecma_transforms_testing.workspace = true
swc_ecma_utils.workspace = true
swc_ecma_visit.workspace = true
